--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,17 @@
     <title>Register</title>
 </head>
 <body>
+
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<ul class=flashes>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endwith %}
+
 <form action="{{ url_for('register') }}", method="post">
     <label for="uname">Username:</label><br>
     <input type="text" id="uname" name="uname" value=""><br>
