--- a/templates/search.html
+++ b/templates/search.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<a href="{{ url_for('logout') }}">Logout</a><br>
+
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 <ul class=flashes>
